2011-02-01  H.J. Lu  <hongjiu.lu@intel.com>

	PR driver/47547
	* lto-wrapper.c (run_gcc): Don't add -dumpdir if linker_output
	is HOST_BIT_BUCKET.

	* opts.c (finish_options): Don't add x_aux_base_name if it is
	HOST_BIT_BUCKET.

2011-02-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47555
	Revert
	2010-07-15  Sebastian Pop  <sebastian.pop@amd.com>

	* params.def (PARAM_SCEV_MAX_EXPR_SIZE): Bump the value to 100.

2011-02-01  Sebastien Bourdeauducq  <sebastien@milkymist.org>

	PR gcc/46692
	* config/lm32/t-lm32: Add multilib for all CPU options.

2011-02-01  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47541
	* tree-ssa-structalias.c (push_fields_onto_fieldstack): Make
	sure to have a field at offset zero.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>

	* config/arc/arc.opt (EB, EL): New Driver options.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>

	* config/alpha/osf5.opt: New.
	* config.gcc (alpha*-dec-osf5.1*): Use alpha/osf5.opt.

2011-01-31  Joseph Myers  <joseph@codesourcery.com>

	* config/vms/vms.opt (map, mvms-return-codes): New Driver options.

2011-01-31  Sebastian Pop  <sebastian.pop@amd.com>

	* common.opt (ftree-loop-linear): Use Alias to make it an alias of
	-floop-interchange.
	* invoke.texi (-ftree-loop-linear): Make it clear that this flag
	is an alias of -floop-interchange and that it requires the
	Graphite infrastructure.
	* tree-ssa-loop.c (gate_graphite_transforms): Do not set
	flag_loop_interchange based on the value of flag_tree_loop_linear.

2011-01-31  Jakub Jelinek  <jakub@redhat.com>
	    Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/47538
	* tree-ssa-ccp.c (bit_value_binop_1): For uns computation use
	type instead of r1type, except for comparisons.  For right
	shifts and comparisons punt if there are mismatches in
	sizetype vs. non-sizetype types.

2011-01-31  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>

	* doc/sourcebuild.texi (Effective-Target Keywords): Document